# game-review-ratio

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  environment.yml  predictions.db  pyproject.toml
conf/base/: catalog.yml  parameters.yml
data/06_models/: production_model.pkl  required_columns.json
docs/: model_card.eng.md  model_card.md
src/api/: main.py
src/gamereviewratio/pipelines/evaluation/: nodes.py  pipeline.py
src/ui/: app.py
tests/: conftest.py
tests/api/: test_healthz.py  test_predict_persists_sqlite.py  test_predict_validation.py  test_validation_error.py
tests/pipelines/evaluation/: test_choose_best_model.py  test_clean_node.py  test_evaluate_autogluon_node.py  test_pipeline.py  test_select_production_node.py  test_split_node.py  test_validation_error.py
